--- a/docs/03/S01.01.intro-dockerfiles.md
+++ b/docs/03/S01.01.intro-dockerfiles.md
@@ -22,3 +22,7 @@ et au fil de cette session et de la prochaine on va faire plusieurs TD de setup 
 - publications des images sur un le repository Docker Hub
 
 mais tout d'abord on commence par un lab sur qu'on a vu hier
+
+## Vos images sur Docker hub
+
+Dans la suite du cours, vous allez publier toutes vos images  sur Docker Hub et elles participeront a votre note du cours.
