--- a/docs/03/S03.03.dockerfiles.md
+++ b/docs/03/S03.03.dockerfiles.md
@@ -3,44 +3,34 @@
 Dans cette session nous allons voir les **Dockerfile**
 
 - comment écrire une Dockerfile, comment l'utiliser
-- les instructions de base
-- lancer un server web nginx
-- améliorer le Dockerfile avec HEALTHCHECK, MAINTAINER, Cleanup, Non-root User
-- V2 en partant de nginx:latest (voir <https://training.play-with-docker.com/beginner-linux/>)
+- les instructions de base et leurs subtilités
+- les layers (couches)
+- le processus de build
+- optimisation d'une image et rapidité du build
 
-- difference entre CMD et ENTRYPOINT
-- persistence des données avec VOLUME
-- variables d'environnement et tokens secret (passwords, clef API etc)
+et pour la partie pratique
 
-puis
+- lancer un server web Nginx en partant de nginx:latest (voir <https://training.play-with-docker.com/beginner-linux/>)
 
-- notion de layers
-- rapidité du build
-- multistage build
+## Comment construire des images ?
 
-Applications
+Invoquer une image de base et de manuellement la modifier en ajoutant des éléments n'est pas un bon moyen de construire des images. Ca ne *scale* pas, il y a trop de risques d'erreur.
 
-- un Dockerfile pour une app streamlit simple
-- un Docker file pour une app python avec scikit learn, LLM ?
-- bot discord ?
-
-## Pourquoi écrire une Dockerfile
-
-Invoquer une image de base et de manuellement la modifier en ajoutant des éléments n'est pas un bon moyen de construire des images. Ca ne scale pas et il y a trop de risques d'erreur.
-
-It does not scale!
-
-- aucun moyen de reproduire les étapes de construction
+- aucun moyen de reproduire les étapes de construction de façon fiable
 - pas de version control
-- erreur humaine
 - difficile de spécifier les versions
 - faible reproductibilité
+- [errare humanum est](https://fr.wikipedia.org/wiki/Errare_humanum_est,_perseverare_diabolicum)
 
-Heureusement docker peut construire des images automatiquement à partir d'un fichier d'instruction appelé Dockerfile.
+![It does not scale](./../../img/memes/itdoesnotscale.jpg)
+
+Heureusement Docker peut construire des images automatiquement à partir d'un fichier d'instruction appelé **Dockerfile**.
+
+## Dockerfile
 
 Ce fichier contient une suite d'instructions, toutes au format **INSTRUCTION arguments**;
 
-Par exemple, ce Dockerfile install python fait tourner un script
+Par exemple, ce fichier Dockerfile install python sur ubuntu puis fait tourner le script `hello_world.py`
 
 ```bash
 FROM ubuntu:latest
@@ -49,82 +39,95 @@ COPY hello-world.py
 CMD python hello-world.py
 ```
 
-Les instructions sont écrites dans un fichier intitulé par défaut Dockerfile
-
-Puis on construit l'image avec
+A partir de ce fichier **Dockerfile**, on construit l'image avec;
 
 ```bash
 docker build .
 ```
 
-ou si le nom du Dockerfile n'est pas ... Dockerfile
+osi le nom du Dockerfile n'est pas ... Dockerfile (par exemple Dockerfile.dev ou Dockerfile.test)
 
 ```bash
-docker build -f nom_du_dockerfile
+docker build -f nom_du_dockerfile .
 ```
 
-Ce qui permet par exemple d'avoir des dockerfile pour différents environnements : Dockerfile.dev, Dockerfile.test etc
+> La commande `docker build` fini toujours par un repertoire. Ici le '.' indique le repertoire courant ou es trouve le fichier Dockerfile.
+> Par convention, le Dockerfile réside dans le repertoire racine du projet.
 
-On peut donc en quelques lignes recréer l'image de serveur web Nginx que nous avons construite manuellement.
+### Instructions du Dockerfile
 
 Voici la Liste des instructions disponibles: <https://docs.docker.com/reference/dockerfile/>
 
 | Instruction  | Description                                                |
 |--------------|------------------------------------------------------------|
-| ADD          | Add local or remote files and directories.                 |
+| **ADD**          | **Add local or remote files and directories.**                 |
+| *COPY*         | *Copy files and directories.*                                |
 | ARG          | Use build-time variables.                                  |
-| CMD          | Specify default commands.                                  |
-| COPY         | Copy files and directories.                                |
-| ENTRYPOINT   | Specify default executable.                                |
-| ENV          | Set environment variables.                                 |
-| EXPOSE       | Describe which ports your application is listening on.     |
-| FROM         | Create a new build stage from a base image.                |
+| **RUN**          | Execute build commands.                                    |
+| **CMD**          | **Specify default commands.**                                  |
+| *ENTRYPOINT*   | *Specify default executable.*                                |
+| **ENV**          | **Set environment variables.**                                 |
+| **EXPOSE**       | **Describe which ports your application is listening on.**     |
+| **FROM**         | **Create a new build stage from a base image.**                |
 | HEALTHCHECK  | Check a container's health on startup.                     |
 | LABEL        | Add metadata to an image.                                  |
 | MAINTAINER   | Specify the author of an image.                            |
 | ONBUILD      | Specify instructions for when the image is used in a build.|
-| RUN          | Execute build commands.                                    |
 | SHELL        | Set the default shell of an image.                         |
 | STOPSIGNAL   | Specify the system call signal for exiting a container.    |
 | USER         | Set user and group ID.                                     |
-| VOLUME       | Create volume mounts.                                      |
+| **VOLUME**       | **Create volume mounts.**                                      |
 | WORKDIR      | Change working directory.                                  |
 
-Nous allons partir d'un jeu d'instruction simple et construire des images de plus en plus complexes.
+Nous allons partir d'un jeu d'instructions simple et construire des images de plus en plus complexes.
 
-En parallèle de pouvoir specifier le contenu des images on regardera les différents paramètres disponibles pour la commande build notamment le mode de caching et la déclaration du réseau.
+En parallèle de pouvoir specifier le contenu des images on regardera les différents paramètres disponibles pour la commande `build`.
 
 ## Premier Dockerfile
 
-### Nom des fichiers
+### Nom des fichiers `Dockerfile` ou autre
 
-Dns la suite nous allons ecrire plusieurs dockerfile. Donc nous utiliserons un nom de fichier unique et different de celui par defaut Dockerfile a chaque fois.
+Il y a un unique Dockerfile par projet (sauf s'il y en a plusieurs pour les envt de dev, test etc )
+La convention est que le fichier Dockerfile soit nommé `Dockerfile` et qu'il réside à la racine du projet.
 
-Le mieux est de créer un repertoire dédié au Dockerfiles
-Mais normallement le Dockerfile est crée a la racine du project
+Dans la suite nous créerons un repertoire par projet qui contiendra le Dockerfile du projet
+
+<!-- Dans la suite nous allons écrire plusieurs dockerfile. Donc nous utiliserons un nom de fichier unique et différent de celui par défaut `Dockerfile` a chaque fois.
+
+Le mieux est de créer un répertoire dédié au Dockerfiles
+Mais normalement, le Dockerfile est crée a la racine du project
 On buildera les images a partir des dockerfiles avec la commande
-
-```bash
+ -->
+<!-- ```bash
 docker build -f <nom du dockerfile> -t <nom de l'image>:<tag de l'image> <nom du repertoire du dockerfile>
-```
+``` -->
 
 ### hello_world.docker
 
-Commençons par un exemple tres simple
+Commençons par un exemple très simple
+
+Créez un repertoire `hello-world`
+
+```bash
+mkdir hello-world
+cd hello-world
+```
+
+Dans un fichier Dockerfile:
 
 ```Dockerfile
 FROM alpine:latest
 CMD echo Hello World!
 ```
 
-Sauvegardez ces lignes dans un fichier `hello_world.docker`
-puis
+- **FROM** va aller chercher l'image de base (`alpine:latest`)
+- **CMD** va exécuter la commande `echo Hello World!`
+
+puis construisez l'image `ynov:hello-world` depuis ce Docekrfile
 
 ```bash
-docker build -f  hello_world.docker -t ynov:hello-world .
+docker build  -t ynov:hello-world .
 ```
-
-cela build l'image `ynov:hello-world` à partir du fichier `hello_world.docker` situé dans le repertoire courant `.`.
 
 On obtient:
 
@@ -142,28 +145,35 @@ ce qui retourne
 hello World!
 ```
 
-## Les instructions
+![Docker is magic](./../../img/memes/docker_magic.jpg)
 
-Les Principales :
+## Les instructions du Dockerfile
 
-- FROM
-- WORKDIR
-- ADD & COPY see p66
-- RUN
-- CMD & ENTRYPOINT p70
+On peut distinguer les instructions  principales :
 
-et aussi:
+| Instruction | exemple | description |
+|-------------|-------------|-------------|
+| **FROM** | `FROM alpine:latest` | Définit l'image de base à partir de laquelle l'image Docker est construite. |
+| **WORKDIR**  | `WORKDIR /app` |  Définit le répertoire de travail dans le conteneur où les commandes suivantes s'exécuteront
+|  **ADD & COPY**  |  Copie des fichiers depuis l’hôte vers le conteneur. `ADD` peut extraire des archives ou télécharger des fichiers distants, `COPY` ne fait que copier localement. | `COPY . /app` |
+| **RUN**  |  Exécute une commande dans le conteneur pendant la construction de l’image (par exemple, installer des paquets).| `RUN apt-get update && apt-get install -y git` |
+| **CMD & ENTRYPOINT**  |  Définit la commande par défaut à exécuter lors du lancement du conteneur. `CMD` peut être remplacé, `ENTRYPOINT` est plus rigide. | `CMD ["python", "hello-world.py"]` |
+| **ENV**  |  Définit des variables d’environnement dans le conteneur. | `ENV ASPNETCORE_ENVIRONMENT=Production` |
+| **VOLUME**  |  Crée un mount point (point de montage) pour stocker des données persistantes en dehors du conteneur. | `VOLUME /var/log/app` |
+| **LABEL**  |  Ajoute des métadonnées à l’image, comme des informations de version ou de description. | `LABEL maintainer="John Doe <john@example.com>"` |
+| **EXPOSE**  |  Indique quels ports le conteneur expose pour être accessibles depuis l’extérieur.| `EXPOSE 80` |
+| **ARG**  |  Définit des variables d'environnement | `ARG CONNECTION_STRING` |
+| **USER**  |  Définit le USER à utiliser pour exécuter l'image | `USER appuser` |
+| **HEALTHCHECK**  |  Vérifier l'état du container régulièrement | `HEALTHCHECK --interval=30s --timeout=3s  CMD curl -f <http://localhost/health>` |
 
-- ENV
-- VOLUME
-- LABEL
-- EXPOSE
+Voir la documentation: <https://docs.docker.com/reference/dockerfile> et ce site <http://anjikeesari.com/developertools/cheatsheets/dockerfile-cheat-sheet/>
 
 ### Premier exemple
 
-On va écrire le Dockerfile qui fais tourner un webserver NGinx et qui donne une page web index.html à l'adresse localhost:8080
+On va écrire le Dockerfile qui fais tourner un serveur web NGinx et qui donne une page web index.html à l'adresse localhost:8080.
+Mais cette fois-ci à partir d'un Dockerfile et non plus en modifiant directement une image de base.
 
-Sur votre machine, créez un nouveau repertoire
+Sur votre machine, créez un nouveau répertoire
 
 ```bash
 mkdir -p ./demo-nginx
@@ -188,71 +198,42 @@ http {
 }
 ```
 
-Télechargez une page web html comme par exemple <https://fr.wikipedia.org/wiki/Linux> et renommez le fichier en index.html
+Téléchargez une page web html comme par exemple <https://fr.wikipedia.org/wiki/Linux> et renommez le fichier en index.html
 `mv Linux index.html`
 
-On travaille sur Ubuntu donc avec `apt-get` comme package manager
+On va travailler sur **Ubuntu** donc avec `apt-get` et `/bin/bash` comme package manager.
 
 Les instructions à écrire dans le fichier Dockerfile sont
 
 - A partir de Ubuntu
 - installer nginx et wget
 - Exposer le port 80
-- creer un workdir  /var/www/html
-- et cd /var/www/html
+- créer un repertoire  /var/www/html
 - copier le fichier index.html dans /var/www/html/
 - copier nginx.local.conf dans /etc/nginx/nginx.conf
 - run nginx
 
-see <https://claude.ai/chat/10486c0b-bd3a-4daf-ba7d-9c5fde902eb0>
+Essayez de ne pas sauter sur la solution tout de suite et d'écrire vous même le Dockerfile
 
-- from Ubuntu
-- install nginx et wget
-- Expose  port 80
-- create a  workdir  /var/www/html
-- cd /var/www/html
-- copy local file index.html in /var/www/html/
-- copy nginx.local.conf in /etc/nginx/nginx.conf
-- run nginx
+Les instructions a utiliser sont:
 
-Les instructions a utiliser sont
-FROM
-RUN
-WORKDIR
-COPY
+- FROM
+- RUN
+- WORKDIR
+- COPY
 
-solution
-
-```bash
-FROM ubuntu:latest
-
-# Install nginx and wget
-RUN apt-get update && apt-get install -y nginx wget
-
-# Expose port 80
-EXPOSE 80
-
-# Set working directory
-WORKDIR /var/www/html
-
-# Copy local index.html to the container
-COPY index.html /var/www/html/
-
-# Copy nginx configuration
-COPY nginx.local.conf /etc/nginx/nginx.conf
-
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
-```
+Le fichier Dockerfile de solution est sur le github.
 
 Une fois le fichier écrit et sauvegardé,
 
-- creez l'image
-  - taggez avec `-t` et le nom `nginx-demo:01`
-- creez et lancez le container
-  - mode detaché `-d`
-  - mappez le port interne du container `80` au port externe `8080`
-- verifiez que la page apparait bien sur localhost:8080
+- créez l'image
+  - taguez avec `-t` et le nom `nginx-demo:01`
+- créez et lancez le container
+  - mode détaché `-d`
+  - associez le port interne du container `80` au port externe `8080`
+- vérifiez que la page apparait bien sur localhost:8080
+
+Soit:
 
 ```bash
 docker build -t nginx-demo:01 .
@@ -276,73 +257,10 @@ Maintenant allez dans le container (`docker exec -it nginx-demo:01 /bin/bash`)
 
 --------
 
-!!! le container s'arrete otut de suite meme en - mode
+!!! le container s'arrete otut de suite meme en mode -d
 
-## On va publier l'image sur docker hub
+## Autres exemples de Dockerfile
 
-- creez un compte sur docker hub
--
-
-## Guidelines and Recommendations for Writing Dockerfiles p79
-
-keep the build context as minimal
-• Use multi-stage builds
-• Skip unwanted packages
-Minimize the number of layers
-
-## CMD vs Entrypoint
-
-excellent exemple
-
-<https://medium.com/@mrdevsecops/dockerfile-cmd-vs-entrypoint-78b219d55df0>
-
-Docker ENTRYPOINT and CMD can have two forms:
-
-    Shell form
-    Exec form
-
-The syntax for any command in shell form is:
-
-<instruction> <command>
-
-The syntax for instructions in exec form is:
-
-<instruction> ["executable", "parameter"]
-
-You can write Docker CMD/ENTRYPOINT instructions in both forms:
-
-- CMD echo "Hello World" (shell form)
-- CMD ["echo", "Hello World"] (exec form)
-- ENTRYPOINT echo "Hello World" (shell form)
-- ENTRYPOINT ["echo", "Hello World"] (exec form)
-
-### Multi-Stage Builds (see file)
-
-what is the advantage of multi-stage builds over docker compose
-see <https://claude.ai/chat/dfdf46cb-7a51-4f3f-9650-2de92e4ec424>
-
-## Exercices
-
-- BUILDING A SIMPLE HELLO WORLD DOCKER IMAGE p81
-
-## Exaemple avec Nginx
-
-<https://medium.com/@mrdevsecops/dockerfile-nginx-842ba0a55b82>
-
-## Avec python et flask
-
-<https://medium.com/@mrdevsecops/dockerfile-python-flask-e03a3c0dfe65>
-
-Exercice :
-voici le app.py et le requirements.txt
-creez le Dockerfile avec
-
-- la base : python-slim ...
--
-
-J'ai la target, aux etudiants d'ecrire le Dockerfile
-et de le tester
-
-## How To Dockerize an Angular Application with multistage build
-
-<https://medium.com/@mrdevsecops/dockerfile-multiple-stage-build-3ee540e7b221>
+- Exemple avec Nginx:  <https://medium.com/@mrdevsecops/dockerfile-nginx-842ba0a55b82>
+- Avec python et flask: <https://medium.com/@mrdevsecops/dockerfile-python-flask-e03a3c0dfe65>
+- How To Dockerize an Angular Application with multistage build : <https://medium.com/@mrdevsecops/dockerfile-multiple-stage-build-3ee540e7b221>
