--- a/docs/01/S01.01.intro.md
+++ b/docs/01/S01.01.intro.md
@@ -37,7 +37,7 @@ Questions, commentaires à [alexis.perrier@ynov.com](mailto:alexis.perrier@ynov.
 
 ## Evaluation
 
-* Les TD comptent pour la note final.
+* Les TD comptent pour la note final. Vous allez publier toutes vos images Docker sur Docker Hub et elles participeront a votre note du cours.
 * Un projet final en classe lors de la dernière après midi ou journée.
 
 La note finale sera composée de 50% (les meilleures notes de TD) + 50% (le projet final)
