mv applications to app/

--- a/docs/02/S02.02.docker-linux.md
+++ b/docs/02/S02.02.docker-linux.md
@@ -13,7 +13,7 @@ Il y a plus de 600 distributions Linux active.
 - Ubuntu est la plus répandu avec 34%
 - suivi par Debian.
 
-Dans un terminal, executez la commande docker run en spécifiant l'image, et une commande a executer ddans le container.
+Dans un terminal, exécutez la commande docker run en spécifiant l'image, et une commande à exécuter dans le container.
 
 ```bash
 docker run -i -t ubuntu /bin/bash
