--- a/docs/03/S03.02.lab.nginxserver.md
+++ b/docs/03/S03.02.lab.nginxserver.md
@@ -36,6 +36,8 @@ La distribution est donc ainsi plus sécurisé car elle offre une surface de vul
 - Alpine est idéal pour les micro-services, les applications simples
 - Ubuntu/Debian sont plus adaptées aux applications complexes.
 
+![base Image size](./../../img/base-image-distros-size.png)
+
 ## Création et accès au container
 
 1. récupérer (`pull`) l'image `alpine:latest`
