--- a/docs/03/S03.04.dockerfiles.md
+++ b/docs/03/S03.04.dockerfiles.md
@@ -26,7 +26,9 @@ Invoquer une image de base et de manuellement la modifier en ajoutant des élém
 
 Heureusement Docker peut construire des images automatiquement à partir d'un fichier d'instruction appelé **Dockerfile**.
 
-## Dockerfile
+## Construire une image à partir d'une Dockerfile
+
+![from dockerfile to image](./../../img/dockerfile-image-container.png)
 
 Ce fichier contient une suite d'instructions, toutes au format **INSTRUCTION arguments**;
 
@@ -83,26 +85,41 @@ Nous allons partir d'un jeu d'instructions simple et construire des images de pl
 
 En parallèle de pouvoir specifier le contenu des images on regardera les différents paramètres disponibles pour la commande `build`.
 
+## Dockerfile et layers
+
+Voir la doc : <https://docs.docker.com/get-started/docker-concepts/building-images/understanding-image-layers/>
+
+Dans une image Docker, les **layers** sont des fichiers ou des répertoires individuels représentant les changements apportés au système de fichiers à différentes étapes du processus de création de l'image.
+
+Chaque layer est en lecture seule et s'appuie sur le layer en dessous, formant une pile de modifications qui, ensemble, définissent l'image complète. Voici un aperçu du fonctionnement des layers :
+
+1. **Layer de base** : Chaque image Docker commence par un layer de base, qui peut être un système d'exploitation minimal comme Ubuntu ou Alpine.
+
+2. **Modifications** : Chaque commande dans un **Dockerfile** (comme `RUN`, `COPY` ou `ADD`) crée un nouveau layer. Par exemple, si vous exécutez `RUN apt-get update` dans un Dockerfile, un nouveau layer est créé avec ces changements.
+
+3. **Composition des layers** : Une image Docker est constituée de plusieurs layers empilés les uns sur les autres, où chaque layer représente un changement du système de fichiers (comme l'installation d'un package ou l'ajout d'un fichier). La combinaison de ces layers forme l'image finale.
+
+4. **Adressable par contenu** : Chaque layer est identifié de manière unique par un hash cryptographique de son contenu, ce qui permet de réutiliser et de partager les layers entre différentes images. Par exemple, si deux images utilisent la même image de base, elles peuvent partager le même layer de base au lieu de le dupliquer.
+
+5. **Efficacité** : Les layers sont partagés entre les images pour optimiser le stockage et réduire le temps de téléchargement. Si vous avez déjà un layer sur votre système, Docker ne le téléchargera pas à nouveau lorsqu'il récupérera une image qui utilise le même layer.
+
+En résumé, les layers Docker sont comme des modifications incrémentales du système de fichiers qui, ensemble, constituent une image complète et exécutable.
+
+<https://www.youtube.com/watch?v=wJwqtAkmtQA>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wJwqtAkmtQA?si=5TVNBocps0luIlaL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Premier Dockerfile
 
 ### Nom des fichiers `Dockerfile` ou autre
 
-Il y a un unique Dockerfile par projet (sauf s'il y en a plusieurs pour les envt de dev, test etc )
+Il y a un unique Dockerfile par projet (sauf s'il y en a plusieurs pour les environnements de dev, test etc )
+
 La convention est que le fichier Dockerfile soit nommé `Dockerfile` et qu'il réside à la racine du projet.
 
-Dans la suite nous créerons un repertoire par projet qui contiendra le Dockerfile du projet
+Dans la suite nous créerons un répertoire par projet qui contiendra le Dockerfile du projet
 
-<!-- Dans la suite nous allons écrire plusieurs dockerfile. Donc nous utiliserons un nom de fichier unique et différent de celui par défaut `Dockerfile` a chaque fois.
-
-Le mieux est de créer un répertoire dédié au Dockerfiles
-Mais normalement, le Dockerfile est crée a la racine du project
-On buildera les images a partir des dockerfiles avec la commande
- -->
-<!-- ```bash
-docker build -f <nom du dockerfile> -t <nom de l'image>:<tag de l'image> <nom du repertoire du dockerfile>
-``` -->
-
-### hello_world.docker
+## hello world
 
 Commençons par un exemple très simple
 
@@ -123,7 +140,7 @@ CMD echo Hello World!
 - **FROM** va aller chercher l'image de base (`alpine:latest`)
 - **CMD** va exécuter la commande `echo Hello World!`
 
-puis construisez l'image `ynov:hello-world` depuis ce Docekrfile
+puis construisez l'image `ynov:hello-world` depuis ce Dockerfile
 
 ```bash
 docker build  -t ynov:hello-world .
@@ -170,8 +187,9 @@ Voir la documentation: <https://docs.docker.com/reference/dockerfile> et ce site
 
 ### Premier exemple
 
-On va écrire le Dockerfile qui fais tourner un serveur web NGinx et qui donne une page web index.html à l'adresse localhost:8080.
-Mais cette fois-ci à partir d'un Dockerfile et non plus en modifiant directement une image de base.
+On va écrire le Dockerfile qui fait tourner un serveur web Nginx et qui publie une page web `index.html` à l'adresse `localhost:8080`. Mais cette fois-ci à partir d'un Dockerfile et non plus en modifiant directement une image de base.
+
+#### travailler dans un répertoire dédié
 
 Sur votre machine, créez un nouveau répertoire
 
@@ -180,11 +198,11 @@ mkdir -p ./demo-nginx
 cd ./demo-nginx
 ```
 
+#### Ecrire la Config Nginx
+
 Créez le fichier  `nginx.local.conf` et y copier le contenu suivant:
 
 ```conf
-daemon off;
-
 events {
  worker_connections 1024;
 }
@@ -198,45 +216,60 @@ http {
 }
 ```
 
+#### récupérer une page web
+
 Téléchargez une page web html comme par exemple <https://fr.wikipedia.org/wiki/Linux> et renommez le fichier en index.html
 `mv Linux index.html`
 
 On va travailler sur **Ubuntu** donc avec `apt-get` et `/bin/bash` comme package manager.
 
-Les instructions à écrire dans le fichier Dockerfile sont
+#### Écrire le Dockerfile
 
-- A partir de Ubuntu
-- installer nginx et wget
-- Exposer le port 80
-- créer un repertoire  /var/www/html
-- copier le fichier index.html dans /var/www/html/
-- copier nginx.local.conf dans /etc/nginx/nginx.conf
-- run nginx
-
-Essayez de ne pas sauter sur la solution tout de suite et d'écrire vous même le Dockerfile
-
-Les instructions a utiliser sont:
+Les instructions à utiliser sont:
 
 - FROM
 - RUN
 - WORKDIR
 - COPY
 
-Le fichier Dockerfile de solution est sur le github.
+Les instructions à écrire dans le fichier Dockerfile sont :
 
-Une fois le fichier écrit et sauvegardé,
+- A partir de Ubuntu (FROM)
+- installer nginx et wget (RUN)
+- Exposer le port 80 (EXPOSE)
+- créer un repertoire  `/var/www/html` (WORKDIR)
+- copier le fichier `index.html` dans `/var/www/html/` (COPY)
+- copier `nginx.local.conf` dans `/etc/nginx/nginx.conf` (COPY)
+- run nginx avec : `nginx -g daemon off` (CMD)
 
-- créez l'image
-  - taguez avec `-t` et le nom `nginx-demo:01`
-- créez et lancez le container
-  - mode détaché `-d`
-  - associez le port interne du container `80` au port externe `8080`
-- vérifiez que la page apparait bien sur localhost:8080
+Essayez de ne pas sauter sur la solution tout de suite et d'écrire vous même le Dockerfile
 
-Soit:
+Le fichier Dockerfile de solution est sur le github : <https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/dockerfiles/ubuntu-nginx-server.docker>
+
+#### Build l'image
+
+Une fois le fichier Dockerfile écrit et sauvegardé,
+
+- créez l'image avec `docker build`
+- taguez avec `-t` et le nom `nginx-demo:01`
+- n'oubliez pas d'ajouter le '.' à la fin de la commande pour indiquer que le Dockerfile réside dans le répertoire courant.
+
+`docker build` va par défaut lire le fichier Dockerfile.
+
+Ce qui donne :
 
 ```bash
 docker build -t nginx-demo:01 .
+```
+
+#### Lancer le container
+
+Créez et lancez le container
+
+- en mode détaché `-d`
+- associez le port interne du container `80` au port externe `8080`
+
+```bash
 docker run -d -p 8080:80 nginx-demo:01
 ```
 
@@ -252,12 +285,13 @@ Exited (1) 8 seconds ago              cool_moore
 
 Maintenant allez dans le container (`docker exec -it nginx-demo:01 /bin/bash`)
 
-- verifiez que le process nginx tourne bien (ps aux | grep nginx)
-- verifiez que ...
+- vérifiez que le process nginx tourne bien (ps aux | grep nginx)
+
+Enfin allez sur `localhost:8080` et vérifiez que vous voyez bien votre page web.
 
 --------
 
-!!! le container s'arrete otut de suite meme en mode -d
+!!! le container s'arrête tout de suite meme en mode -d
 
 ## Autres exemples de Dockerfile
 
